--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@
               </ul>
           </div>
           <div class="header__mobileMenu_application">
+            <a href="tel:+7(3452)60-82-47">
             <button class="header__mobileMenu_application-btn">
               <div class="header__mobileMenu_application-phoneIcon"></div>
               Обратный звонок
             </button>
+            </a>
             <div class="header__block_times">
               <div class="header__mobileMenu_application-time"></div>
-              <p class="header__mobileMenu_application-text">Ежедневно с 9-00 до 21-00</p>
               <p class="header__mobileMenu_application-text">Ежедневно с 9-00 до 21-00</p>
             </div>
             <ul class="header__mobileMenu_application-links">
@@ -180,7 +181,6 @@
               <div class="header__block_times">
                 <div class="header__block_time"></div>
                 <p class="header__block_text">Ежедневно с 9-00 до 21-00</p>
-                <p class="header__block_text">Ежедневно с 9-00 до 21-00</p>
               </div>
             </div>
           </div>
@@ -232,9 +232,11 @@
             </div>
           </div>
           <div class="main__widget2">
+            <a href="tel:+7(3452)60-82-47">
             <button class="main__widget2_phoneBtn">
               <div class="main__widget2_phoneIcon"></div>
             </button>
+            </a>
             <div class="widget2__sale">
               <div class="widget2__sale_implant"></div>
               <div class="widget2__sale_textContainer1">
@@ -1206,8 +1208,7 @@
                   <div class="patquest__message-window--question--text">У меня диабет. Мне можно делать имплантацию? </div>
                 </div>
                 <div class="patquest__message-window--answer">
-                  <div class="patquest__message-window--answer--text">Да. При компенсации уровня сахара можно
-всё приживается</div>
+                  <div class="patquest__message-window--answer--text">Да. При компенсации уровня сахара можно всё приживается</div>
                   <img src="./src/assets/svg/patquest/shape.svg" alt="" class="patquest__message-window--question--img">
                 </div>
               </div>
@@ -1297,7 +1298,31 @@
               <div class="opinion__btn-close--img"></div>
               <div class="opinion__btn-close--img"></div>
               <div class="opinion__btn-close--img"></div>
-          </button>
+        </button>
+      </div>
+    </div>
+
+    <div class="backblur backblur3">
+      <div class="popupQuiz">
+
+        <button class="popupQuiz__btn-close">
+              <div class="popupQuiz__btn-close--img"></div>
+              <div class="popupQuiz__btn-close--img"></div>
+              <div class="popupQuiz__btn-close--img"></div>
+        </button>
+
+        <p class="popupQuiz__header-text1">Пройдите опрос</p>
+        <p class="popupQuiz__header-text2">Всего 3 вопроса</p>
+
+        <img src="./src/assets/png/popupQuiz/tooth.png" alt="Имплант" class="popupQuiz__img">
+
+        <div class="popupQuiz__title">
+          <h2 class="popupQuiz__title--text">
+            <span class="popupQuiz__title--text_whiteGreen"></span>
+            <span class="popupQuiz__title--text_darkGreen"></span>
+          </h2>
+        </div>
+
       </div>
     </div>
 
@@ -1320,7 +1345,6 @@
                         </div>
                         <div class="footer__feedback_time">
                             <div class="header__block_time"></div>
-                            <p class="header__block_text">Ежедневно с 9-00 до 21-00</p>
                             <p class="header__block_text">Ежедневно с 9-00 до 21-00</p>
                         </div>
                         <div class="footer__feedback_addresses">
@@ -1380,6 +1404,7 @@
                             <br>Фотографии и видео размещены с письменного согласия субъектов персональных данных в соответствии со ст.10.1 ФЗ №152-ФЗ "О персональных данных".
                         </p>
                     </div>
+                    <img src="./src/assets/svg/footer/design.svg" alt="Дизайн Пророк" class="footer__prorok">
                     <div class="footer__warning">
                         <p class="footer__warning_text">
                             ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. НЕОБХОДИМА КОНСУЛЬТАЦИЯ СПЕЦИАЛИСТА
