--- a/index.html
+++ b/index.html
@@ -1882,18 +1882,35 @@
         </button>
 
         <p class="popupQuiz__header-text1">Пройдите опрос</p>
-        <p class="popupQuiz__header-text2">Всего 3 вопроса</p>
+        <p class="popupQuiz__header-text2">Всего 4 вопроса</p>
 
         <img src="./src/assets/png/popupQuiz/tooth.png" alt="Имплант" class="popupQuiz__img">
 
         <div class="popupQuiz__title">
           <h2 class="popupQuiz__title--text">
-            <span class="popupQuiz__title--text_whiteGreen"></span>
-            <span class="popupQuiz__title--text_darkGreen"></span>
+            <span class="popupQuiz__title--text_whiteGreen">Не уходите</span>
+            <span class="popupQuiz__title--text_darkGreen">с пустыми руками</span>
           </h2>
+          <p class="popupQuiz__title--p">Расчитайте стоимость лечения в клинике Ультра-Дент, чтобы стало, с чем сравнить</p>
         </div>
 
+        <h2 class="quiz__title">
+            <span class="quiz__title-text_darkGreen">Рассчитайте стоимость <span class="quiz__title-decorate_opac"></span> лечения</span><br>
+           <span class="quiz__title-text_whiteGreen">и получите диагностику <span class="quiz__title-decorate_blue"><img src="./src/assets/png/quiz/gift.png" alt="Подарок" class="quiz__title-gift"></span> бесплатно</span>
+        </h2>
+
+        <a href="#quiz">
+        <button class="popupQuiz__btnNext btnBlueAnimate">
+          Рассчитать стоимость
+          <div class="main__applicationBtn_icon">
+              <img src="./src/assets/svg/btns/arrow_right.svg" alt="">
+            </div>
+        </button>
+        </a>
+
       </div>
+
+      <img src="./src/assets/png/popupQuiz/popupquestDoctor.png" alt="Доктор" class="popupQuiz__doctor">
     </div>
 
     <div class="footer">
@@ -1964,10 +1981,10 @@
                     </div>
                     <div class="footer__license">
                         <p class="footer__license_text">
-                            Лицензия: ЛО41-01107-72/00328639 от 21.08.2020 г.,
-                            выдана Департаментом здравоохранения Тюменской области.
-                            <br>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "ФИЛАТОВСКАЯ КЛИНИКА"
-                            <br>625062, Тюменская область, город Тюмень, ул. Николая Зелинского, д. 5 к. 2/1
+                            Лицензия: № Л041-01107-72/00328410 от 16.11.2017 г.
+                            Выдана Департаментом здравоохранения Тюменской области.
+                            <br>Общество с ограниченной ответственностью "Ультра-Дент".
+                            <br>625000, Россия, Тюменская область, г. Тюмень, ул. Челюскинцев, д. 29
                         </p>
                         <p class="footer__license_text-light">
                             Обращаем ваше внимание, что цены на сайте могут отличаться от цен в Клинике и не являются публичной офертой согласно ст. 437 (2) ГК РФ.
@@ -1978,7 +1995,7 @@
                     <img src="./src/assets/svg/footer/design.svg" alt="Дизайн Пророк" class="footer__prorok">
                     <div class="footer__warning">
                         <p class="footer__warning_text">
-                            ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ НЕОБХОДИМА КОНСУЛЬТАЦИЯ СПЕЦИАЛИСТА
+                            ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. НЕОБХОДИМА КОНСУЛЬТАЦИЯ СПЕЦИАЛИСТА
                         </p>
                     </div>
                 </div>
