--- a/index.html
+++ b/index.html
@@ -1992,7 +1992,7 @@
                             <br>Фотографии и видео размещены с письменного согласия субъектов персональных данных в соответствии со ст.10.1 ФЗ №152-ФЗ "О персональных данных".
                         </p>
                     </div>
-                    <img src="./src/assets/svg/footer/design.svg" alt="Дизайн Пророк" class="footer__prorok">
+                    <a href="https://www.behance.net/prorokk" class="footer__prorok--link"><img src="./src/assets/svg/footer/design.svg" alt="Дизайн Пророк" class="footer__prorok"></a>
                     <div class="footer__warning">
                         <p class="footer__warning_text">
                             ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. НЕОБХОДИМА КОНСУЛЬТАЦИЯ СПЕЦИАЛИСТА
